<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:orientation="vertical"
              android:layout_marginTop="15dp"
              android:layout_marginRight="10dp"
              android:layout_height="fill_parent">
    <LinearLayout android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/site_name"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/site_name"
                  android:singleLine="true"
                  style="@style/editTextFont"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/host"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/host"
                  android:singleLine="true"
                  style="@style/editTextFont"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/port"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/port"
                  android:inputType="number"
                  android:text="21"
                  style="@style/editTextFont"
                  android:singleLine="true"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/account"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/account"
                  android:singleLine="true"
                  style="@style/editTextFont"
                  android:text="admin"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/password"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/password"
                  style="@style/editTextFont"
                  android:password="true"
                  android:singleLine="true"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <TextView android:text="@string/connInf"
              android:textStyle="bold"
              android:layout_marginTop="15dp"
              android:layout_marginBottom="10dp"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:layout_width="fill_parent"/>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/account"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/account1"
                  android:singleLine="true"
                  style="@style/editTextFont"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/password"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/password1"
                  android:singleLine="true"
                  android:password="true"
                  style="@style/editTextFont"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent">
        <TextView android:text="@string/site_address"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginRight="5dip"
                  android:layout_width="80dip"/>
        <EditText android:id="@+id/address"
                  android:singleLine="true"
                  style="@style/editTextFont"
                  android:layout_width="fill_parent"
                  android:layout_height="35dp"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
                  android:layout_marginTop="15dp"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent">
        <Button android:text="@string/signin"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginLeft="10dp"
                android:id="@+id/signin"
                android:layout_gravity="center"/>
        <Button android:text="@string/save"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/save"
                android:layout_weight="1"
                android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>